Converted File menu to standalone class. Added some more menu entries to be disabled when no document
git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk@1826 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/Padre/share/locale/de.po
+++ b/Padre/share/locale/de.po
@@ -311,7 +311,7 @@ msgid "Close All"
 msgstr "Alle schließen"
 
 #: ../../lib/Padre/Wx/Menu.pm:273
-msgid "Close All but Current Document"
+msgid "Close All but Current"
 msgstr "Alle schließen außer dem aktiven Dokument"
 
 #: ../../lib/Padre/Wx/Menu.pm:278
