--- a/share/locale/fr.po
+++ b/share/locale/fr.po
@@ -543,7 +543,7 @@ msgstr "Tout fermer"
 
 #: /home/jquelin/prog/padre/trunk/lib/Padre/Wx/Menu.pm:269
 #: /home/jquelin/prog/padre/trunk/blib/lib/Padre/Wx/Menu.pm:273
-msgid "Close All but Current Document"
+msgid "Close All but Current"
 msgstr "Tout fermer sauf le document courant"
 
 #: /home/jquelin/prog/padre/trunk/lib/Padre/Wx/Menu.pm:274
