--- a/share/locale/ru.po
+++ b/share/locale/ru.po
@@ -549,7 +549,7 @@ msgstr "Закрыть все"
 
 #: /home/jquelin/prog/padre/trunk/lib/Padre/Wx/Menu.pm:269
 #: /home/jquelin/prog/padre/trunk/blib/lib/Padre/Wx/Menu.pm:273
-msgid "Close All but Current Document"
+msgid "Close All but Current"
 msgstr "Закрыть все, кроме текущего"
 
 #: /home/jquelin/prog/padre/trunk/lib/Padre/Wx/Menu.pm:274
