--- a/Padre/Changes
+++ b/Padre/Changes
@@ -6,6 +6,7 @@ Note: If you are having issues running Padre after upgrading to 0.21,
       whether that fixes the issues. YMMV and let us know about any
       problems.
 
+    
     Now using Module::Install for building (ADAMK, SMUELLER, SZABGAB)
     Fixed bookmark-related crash (#172) (SvenDowideit)
     Fixed syntax-checker related focus glitch (#173) (SvenDowideit)
@@ -26,6 +27,7 @@ Note: If you are having issues running Padre after upgrading to 0.21,
         match the underlying Wx::*** classes that they subclass. (ADAMK)
     Option to always auto-detect indentation style and adapt for each
         open document. (SMUELLER)
+    Option to hide the horizontal scroll bar in editor (PMURIAS)
     Default to showing functions in alphabetical order. (SMUELLER)
     Option to show functions in alphabetical order, except private methods
         go last. (SMUELLER)
