--- a/Padre/Changes
+++ b/Padre/Changes
@@ -1,5 +1,8 @@
 Changes for Padre.
 
+    Allow selection of editor font and current line background 
+        color (HJANSEN)
+
 v0.21 2008.12.14
 
 Note: If you are having issues running Padre after upgrading to 0.21,
