--- a/Padre/Changes
+++ b/Padre/Changes
@@ -1,4 +1,7 @@
 Changes for Padre.
+	Italian translation updated (SBLANDIN)
+	
+v0.21 2008.12.15
 
     Allow selection of editor font and current line background 
         color (HJANSEN)
